--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -31,9 +31,9 @@
       <section class="info-card">
         <h3>About</h3>
         <p>
-          IceAge is a short puzzle-adventure game developed in a team of 7 for a university project in collaboration with an after-school care company. The game was inspired by stories and 
-          characters imagined by children while trying to create a similar experience to <strong>Captain Toad</strong>. Players traverse icy levels, collect crystals, and interact with 
-          environmental systems, all within a robust custom Unity framework.
+          IceAge is a short puzzle-adventure game developed in a team of 7 for a university project in collaboration with an after-school care company, where I was one of the two Engineers 
+          that workes on this project. The game was inspired by stories and characters imagined by children while trying to create a similar experience to <strong>Captain Toad</strong>.
+          Players traverse icy levels, collect crystals, and interact with environmental systems, all within a robust custom Unity framework.
         </p>
       </section>
 
@@ -51,7 +51,7 @@
       <section class="project-section">
         <h1>Description</h1>
         <p>
-          The game’s foundation was built around a centralized but highly decoupled architecture. Each gameplay system could be independently toggled, initialized, and maintained. This 
+          The game's foundation was built around a centralized but highly decoupled architecture. Each gameplay system could be independently toggled, initialized, and maintained. This 
           approach helped with debugging, testing individual components, and scaling up development as complexity increased. It also ensured cleaner separation of concerns across the team.
         </p>
       </section>
@@ -64,7 +64,7 @@
         </a>
       </h2>
       <p>
-        At the heart of IceAge’s environmental interaction is a monolith system — a modular design that acts as a bridge between in-world triggers and abstract game logic. Each element 
+        At the heart of IceAge's environmental interaction is a monolith system — a modular design that acts as a bridge between in-world triggers and abstract game logic. Each element 
         in the world that can trigger behavior (like pressure plates, switches, or interactables) is treated as a self-contained logic block that communicates with the central game state. 
         These monoliths could register themselves at runtime and receive signals, allowing designers to build complex interactions without tightly coupling gameplay code. The flexibility 
         of this system proved critical in building puzzles and level events quickly and cleanly.
@@ -106,7 +106,7 @@
       </h2>
         <p>
           To improve iteration speed and streamline level design, I built several editor extensions. These tools allowed non-programmers to configure enemy patrol routes, visualize gameplay
-           triggers in the scene, and manage debug visual volumes. The tools were integrated directly into the Unity Editor, significantly increasing team productivity.
+          triggers in the scene, and manage debug visual volumes. The tools were integrated directly into the Unity Editor, significantly increasing team productivity.
         </p>
       </section>
 
@@ -119,7 +119,7 @@
       </h2>
         <p>
           In-game feedback was handled via a modular popup system that queued visual messages for the player. This system supported stacked tutorials, tips, and event-driven alerts,
-           all decoupled from the game logic. It improved onboarding and helped guide the player through the different puzzle mechanics without breaking immersion.
+          all decoupled from the game logic. It improved onboarding and helped guide the player through the different puzzle mechanics without breaking immersion.
         </p>
       </section>
 
@@ -129,7 +129,7 @@
           Working on IceAge gave me a deeper appreciation for systems thinking and modular design. I learned how important it is to design with flexibility in mind, especially 
           in a collaborative team environment where different people need to plug into the same framework. I also gained experience building practical Unity tooling that sped up 
           iteration, and I improved my ability to balance clean architecture with fast prototyping under tight deadlines. Above all, it taught me how to structure game logic in a
-           way that is easy to scale, debug, and communicate to others.
+          way that is easy to scale, debug, and communicate to others.
         </p>
       </section>
 
