--- a/Projects/project3.html
+++ b/Projects/project3.html
@@ -18,14 +18,14 @@
     <div class="project-wrapper">
       <button id="go-back-btn">← Go Back</button>
 
-      <div class="project-hero">
+      <!--<div class="project-hero">
         <div class="video-container">
           <video autoplay muted loop playsinline>
             <source src="../Images/TowerDefense/TowerDefenseDemo.mp4" type="video/mp4"/>
           </video>
         </div>
         <h1>Tower Defense</h1>
-      </div>
+      </div>-->
 
       <div class="info-section-wrapper">
         <section class="info-card">
@@ -139,9 +139,8 @@
       <section class="project-section">
         <h1>Gallery</h1>
         <div class="gallery">
-          <img src="../Images/TowerDefense/towerDef1.png" alt="Tower Screenshot 1" />
-          <img src="../Images/TowerDefense/tower2.png" alt="Tower Screenshot 2" />
-          <img src="../Images/TowerDefense/tower3.png" alt="Tower Screenshot 3" />
+          <img src="../Images/TowerDefense/TowerDefenseBuyMenu.png" alt="Tower Screenshot 1" />
+          <img src="../Images/TowerDefense/towerDef1.png" alt="Tower Screenshot 2" />
         </div>
       </section>
 
