--- a/Projects/project6.html
+++ b/Projects/project6.html
@@ -18,6 +18,16 @@
     <div class="project-wrapper">
       <button id="go-back-btn">← Go Back</button>
 
+      <div class="project-hero">
+        <div class="video-container">
+          <video autoplay muted loop playsinline>
+              <source src="../Images/Algorithms.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+        <h1>3D Rendering Projects</h1>
+      </div>
+
       <div class="info-section-wrapper">
         <section class="info-card">
           <h3>About</h3>
@@ -101,13 +111,6 @@
           This project helped me understand procedural content generation, graph construction, and unweighted pathfinding algorithms works. I practiced recursion, queue-based
           logic, and spatial reasoning across interconnected systems.
         </p>
-      </section>
-
-      <section class="project-section">
-        <h1>Gallery</h1>
-        <div class="gallery">
-          <img src="https://github.com/user-attachments/assets/4b63831c-2ff0-4b71-a32e-ace5a329678d" alt="Dungeon View" />
-        </div>
       </section>
 
       <section class="project-section">
