--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@
 
         <div class="project-wrapper">
           <div class="project-card" data-project-url="project6.html">
-             <img src="Images/SoftwareArchitecture/SoftwareArchitecture.png" alt="Project 6 Preview">
+             <video autoplay muted loop playsinline>
+              <source src="Images/Algorithms.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
             <h3 class="visually-hidden">Project 6</h3>
             
             <div class="project-meta">
