fixed ice age title on index

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
 
           <div class="project-description">
-            <h4>MazeGenerator</h4>
+            <h4>IceAge</h4>
             <p>A Unity-based 3D puzzle game created in close collaboration with an after-school care agency, featuring handcrafted levels, modular architecture,
                and gameplay systems built with C# and custom tools.</p>
           </div>
