--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="split-panel left"></div>
       <div class="split-panel right"></div>
     </div>
-    
+
     <header> 
       <div class="container header-container">
         <div class="header-left">
@@ -328,5 +328,6 @@
   });
 </script>
 
+<!-- <script src="asciiCube.js"></script> -->
 </body>
 </html>
