--- a/index.html
+++ b/index.html
@@ -328,6 +328,6 @@
   });
 </script>
 
-<!-- <script src="asciiCube.js"></script> -->
+<script src="scripts/asciiCube.js"></script> 
 </body>
 </html>
